--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "jquery": "3.3.1",
     "moment-timezone": "0.5.21",
     "timezoner": "0.2.0"
   },
