--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "geo-tz": "^4.0.2",
     "jquery": "3.3.1",
-    "moment-timezone": "0.5.21",
-    "timezoner": "0.2.0"
+    "moment-timezone": "0.5.21"
   },
   "devDependencies": {
     "electron": "2.0.8"
